include bootstrap.css instead of going to the CDN. change h2 font-size on mobile to prevent wrapping on mobile

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -220,6 +220,9 @@
 }
 
 @media only screen and (max-width: 360px) {
+  h2 {
+    font-size: 16px;
+  }
   .card-definition {
     font-size: 14px;
   }
